Add jabby dependency

--- a/plugins/planck_jabby/package.json
+++ b/plugins/planck_jabby/package.json
@@ -36,6 +36,7 @@
     "typescript": "^5.4.2"
   },
   "dependencies": {
-    "@rbxts/planck": "^0.2.0-rc.1"
+    "@rbxts/planck": "^0.2.0-rc.1",
+    "@rbxts/jabby": "^0.2.0-rc.8"
   }
 }
