--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,12 @@
     "luau-lsp.completion.imports.enabled": true,
     "luau-lsp.completion.imports.suggestServices": true,
     "luau-lsp.completion.imports.suggestRequires": false,
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true
+    },
+    "hide-files.files": [],
 }
