--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
 	"workspaces": [
 		"out/*"
 	],
+	"scripts": {
+		"build": "rbxtsc --rojo typescript.project.json",
+		"watch": "rbxtsc --rojo typescript.project.json -w",
+		"prepublishOnly": "npm run build"
+	},
 	"devDependencies": {
 		"@rbxts/compiler-types": "^2.3.0-types.1",
 		"@rbxts/types": "^1.0.781",
