Fix luau type errors

--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -1,4 +1,16 @@
 {
+  "lsp": {
+    "luau-lsp": {
+      "settings": {
+        "ext": {
+          "roblox": {
+            "enabled": true,
+            "security_level": "roblox_script"
+          }
+        }
+      }
+    }
+  },
   "languages": {
     "Luau": {
       "formatter": {
