--- a/src/planck_jabby/wally.toml
+++ b/src/planck_jabby/wally.toml
@@ -16,4 +16,4 @@ Jest = "jsdotlua/jest@3.6.1-rc.2"
 JestGlobals = "jsdotlua/jest-globals@3.6.1-rc.2"
 
 [dependencies]
-Jabby = "alicesaidhi/jabby@0.2.0-rc.9"
+Jabby = "alicesaidhi/jabby@0.3.0"
