--- a/src/planck/package.json
+++ b/src/planck/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@rbxts/planck",
-	"version": "0.2.0-rc.3",
+	"version": "0.2.0",
 	"description": "An Agnostic Scheduler for ECS",
 	"main": "src",
 	"repository": {
